# alembic

./: alembic.ini  live_migrations.db  models.py  pyproject.toml  xpto.sql  xpto2.sql  xpto3.sql  xpto4.sql
lazah/versions/: 426b167f69fd_primeira.py  4509f3478aee_tabela_pessoa2.py  70be69d705e5_campo_idade_na_pessoa2.py  8a75358ecf69_criando_compo_senha_na_tabela_pessoa.py  8b5d507844a4_alteracao_no_campo_email_para_100_chars.py  comando
